InternexDev_Sandbox/src/objects/Forecasting_Configuration__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>BucketsOnBase__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Buckets On Base</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Default_Currency__c</fullName>
        <label>Default Currency</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Forecast_Filter__c</fullName>
        <label>Forecast Filter</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FreezeDate__c</fullName>
        <label>Freeze Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Multi_Currency__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Multi Currency</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NameSpace__c</fullName>
        <label>Name Space</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Forecasting Configuration</label>
</CustomObject>